# public/docs/openapi.yaml
@@ -93,7 +93,7 @@ paths:
                 name:
                   type: string
                   description: 'This field is required when <code>id</code> is not present. Must not be greater than 255 characters.'
-                  example: zmsxuqojfdsywwnxttdyfasndchafax
+                  example: bkmaxsshvmtajhcpanqwmavhtusbtsomqpqcvgnqkgylqzof
       security: []
   /api/babies:
     get:
@@ -131,21 +131,21 @@ paths:
                 example:
                   data:
                     -
-                      id: 38
-                      name: 'Mr. Dameon Williamson'
+                      id: 41
+                      name: 'Anika Runte'
                     -
-                      id: 39
-                      name: 'Mrs. June Kihn'
+                      id: 42
+                      name: 'Raven Kessler'
                 properties:
                   data:
                     type: array
                     example:
                       -
-                        id: 38
-                        name: 'Mr. Dameon Williamson'
+                        id: 41
+                        name: 'Anika Runte'
                       -
-                        id: 39
-                        name: 'Mrs. June Kihn'
+                        id: 42
+                        name: 'Raven Kessler'
                     description: '"list of all Babies"'
                     items:
                       type: object
@@ -201,7 +201,7 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: ilruih
+                  example: wjkvzkanbyfejpudeyqwxznjzopcgxlbdznlygnregzgfdnlnficjatgmishsuvltfmrvcrwjwrjsgxgythyseubkbniybfpkuqqystpad
               required:
                 - name
   '/api/babies/{id}':
@@ -239,14 +239,14 @@ paths:
                 type: object
                 example:
                   data:
-                    id: 40
-                    name: 'Kellie Boyle'
+                    id: 43
+                    name: 'Keyshawn Hauck MD'
                 properties:
                   data:
                     type: object
                     example:
-                      id: 40
-                      name: 'Kellie Boyle'
+                      id: 43
+                      name: 'Keyshawn Hauck MD'
                     description: "\" App\\Models\\Baby Info\"\nReturn a one App\\Models\\Baby by id"
         401:
           description: Unauthenticated
@@ -300,7 +300,7 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: poivbvgpmmlolzsuvpmngvnsldhpxcdyzlbnqzxcfxupwyenekqujriiqidleohomdjsuyspjtbintaxzxunnugtncioemnulaogsqizoowujjyudcxmcqiqlvgfsjxojfamzmqeqvsspjdtnzraswaovogibppjpxpyqnfqg
+                  example: eboijurudjzmgjvjjpwjedsdglcjlmqmmymlluoysksaccbde
               required:
                 - name
     delete:
@@ -336,7 +336,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the baby.'
-        example: 10
+        example: 19
         required: true
         schema:
           type: integer
@@ -380,7 +380,7 @@ paths:
                   type: The
                   description: 'id of the parent.'
                   example: '9'
-  /api/parents:
+  /api/parents/partner:
     get:
       summary: 'Show Partner.'
       description: ''
@@ -416,25 +416,25 @@ paths:
                 example:
                   data:
                     -
-                      id: 28
-                      name: 'Shayne Moore'
-                      email: connor84@example.org
+                      id: 30
+                      name: 'Devin Zulauf'
+                      email: fermin.ohara@example.org
                     -
-                      id: 29
-                      name: 'Jordane Spinka'
-                      email: laisha.becker@example.org
+                      id: 31
+                      name: 'Jessy Mueller'
+                      email: laurianne82@example.org
                 properties:
                   data:
                     type: array
                     example:
                       -
-                        id: 28
-                        name: 'Shayne Moore'
-                        email: connor84@example.org
+                        id: 30
+                        name: 'Devin Zulauf'
+                        email: fermin.ohara@example.org
                       -
-                        id: 29
-                        name: 'Jordane Spinka'
-                        email: laisha.becker@example.org
+                        id: 31
+                        name: 'Jessy Mueller'
+                        email: laurianne82@example.org
                     items:
                       type: object
         401:
